# agentcontrol-ed26-artifact

./: .env.example  ARTIFACT_OVERVIEW.md  DATASET_METADATA.md  LEAN_TREE_MANIFEST.md  LICENSE  README.md  REPRODUCIBILITY.md  pyproject.toml
cache/: cost_ledger.jsonl
experiments/: aggregate_summary.json  baselines_summary.json  ed_artifact_manifest.json  ed_bootstrap_ci.json  ed_cached_ablations.json  ed_family_reweighting.json  ed_oracle_sanity_checks.json  ed_sensitivity.json  hard_regime_bootstrap.json  hard_regime_collection_summary_deepseek.json  hard_regime_collection_summary_together.json  hard_regime_cost_estimate.json  hard_regime_ledger_manifest.json  hard_regime_outcomes_deepseek.json  hard_regime_outcomes_together.json  hard_regime_pool_manifest.json  hard_regime_sensitivity.json  hard_regime_summary_deepseek.json  hard_regime_summary_joint.json  hard_regime_summary_together.json  heuristic_bdelg_summary.json  oracle_gap_summary.json  rescue_collection_summary_deepseek.json  rescue_collection_summary_together.json  rescue_outcomes_deepseek.json  rescue_outcomes_together.json  rescue_summary_deepseek.json  rescue_summary_joint.json  rescue_summary_together.json  rescue_task_pool_manifest.json  smoke_outcomes.json
scripts/: aggregate_results.py  build_hard_regime_pool.py  build_rescue_task_pool.py  enumerate_oracle_graph.py  estimate_hard_regime_cost.py  make_ed_tables.py  make_figures.py  make_hard_regime_figures.py  make_hard_regime_tables.py  prepare_ed_package.py  reconcile_hard_regime_ledger.py  run_baselines.py  run_ed_bootstrap_ci.py  (+18 more)
(+123 files in other folders)
