[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcontrol"
version = "0.1.0"
description = "AgentControl: A Fair-Baseline Protocol for Evaluating Budgeted LLM Agent Orchestration"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.7",
  "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
